<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>utils</groupId>
  <artifactId>utils.spark</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>format_converter</name>
  <url>http://maven.apache.org</url>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-sql_2.12</artifactId>
      <version>3.5.0</version> 
    </dependency>
  </dependencies>
  <properties>
    <maven.compiler.release>9</maven.compiler.release> 
</properties>
<build>
  <plugins>
    <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>exec-maven-plugin</artifactId>
      <version>1.6.0</version>
      <executions>
          <execution>
              <goals>
                  <goal>exec</goal>
              </goals>
          </execution>
      </executions>
      <configuration>
          <executable>java</executable>
          <commandlineArgs>
            --add-opens java.base/sun.nio.ch=ALL-UNNAMED -classpath %classpath format_converter.FormatConverter
          </commandlineArgs>
      </configuration>
    </plugin>
  </plugins>
</build>
</project>
